# widget_app

./: .env  .gitignore  app.py  dashboard.py  install.sh  langgraph.json  market_hierarchy.json  portfolio.py  pyproject.toml  requirements.txt  trending.py
.streamlit/: config.toml
src/: Market_Intensity_Heatmap.py  cot_index.py  dashboard.py  finance_nb.ipynb  portfolio.py  test.py  trending.py
test/: unit_etst.ipynb
tiingo_ticker_cache/: IGV.pkl  SMH.pkl  VGT.pkl  XLK.pkl  XLV.pkl
