[project]
name = "financial-insight-widget"
version = "0.1.0"
description = "财务数据分析与可视化工具"
authors = [
    { name = "LEO", email = "zfleo.us@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "streamlit>=1.30.0",
    "yfinance>=0.2.50",
    "pandas>=2.0.0",
    "google-genai",
    "plotly",
    "dotenv",
    "pandas-stubs~=2.3.3",
    "lxml",
    "matplotlib",
    "langgraph",
    "TA-Lib",
    "ipykernel>=7.1.0",
    "certifi",
    "streamlit-aggrid"
]
